--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "pwademo",
-  "short_name": "pwademo",
+  "name": "DYC Survey",
+  "short_name": "DYC Survey",
   "theme_color": "#1976d2",
   "background_color": "#fafafa",
   "display": "standalone",
