--- a/manifest.json
+++ b/manifest.json
@@ -8,42 +8,27 @@
   "start_url": "/",
   "icons": [
     {
-      "src": "assets/icons/icon-72x72.png",
-      "sizes": "72x72",
+      "src": "assets/icons/mac-appicon-16@2x..png",
+      "sizes": "16x16",
       "type": "image/png"
     },
     {
-      "src": "assets/icons/icon-96x96.png",
-      "sizes": "96x96",
+      "src": "assets/icons/mac-appicon-32@2x.png",
+      "sizes": "32x32",
       "type": "image/png"
     },
     {
-      "src": "assets/icons/icon-128x128.png",
+      "src": "assets/icons/mac-appicon-128@2x.png",
       "sizes": "128x128",
       "type": "image/png"
     },
     {
-      "src": "assets/icons/icon-144x144.png",
-      "sizes": "144x144",
+      "src": "assets/icons/mac-appicon-256@2x.png",
+      "sizes": "256x256",
       "type": "image/png"
     },
     {
-      "src": "assets/icons/icon-152x152.png",
-      "sizes": "152x152",
-      "type": "image/png"
-    },
-    {
-      "src": "assets/icons/icon-192x192.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "assets/icons/icon-384x384.png",
-      "sizes": "384x384",
-      "type": "image/png"
-    },
-    {
-      "src": "assets/icons/icon-512x512.png",
+      "src": "assets/icons/mac-appicon-512@2x.png",
       "sizes": "512x512",
       "type": "image/png"
     }
